Adjust margins/padding, cell sizes to fix layout on small screens.
Fixes #9

--- a/css/varsityhockey.css
+++ b/css/varsityhockey.css
@@ -46,13 +46,15 @@ div.article {
 	/*border: 2px solid black;*/
 	/*padding: 20px;*/
 	padding-bottom: 20px;
-	margin: 20px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 20px;
 }
 
 div.article-heading {
 	background: #fefefe;
 	/*margin: 20px;*/
-	padding-left: 20px;
+	padding-left: 10px;
 	/*margin-top: 0px;*/
 }
 
@@ -74,6 +76,7 @@ div.article-body {
 }
 
 .img-thumbnail {
+	min-width:90px;
 	width: 90px;
 	height: 90px;
 /*	width: 100%;
